--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spindb",
-  "version": "0.21.3",
+  "version": "0.22.0",
   "description": "Zero-config Docker-free local database containers. Create, backup, and clone a variety of popular databases.",
   "type": "module",
   "bin": {
@@ -20,10 +20,11 @@
     "test:clickhouse": "node --import tsx --test --experimental-test-isolation=none tests/integration/clickhouse.test.ts",
     "test:duckdb": "node --import tsx --test --experimental-test-isolation=none tests/integration/duckdb.test.ts",
     "test:qdrant": "node --import tsx --test --experimental-test-isolation=none tests/integration/qdrant.test.ts",
+    "test:meilisearch": "node --import tsx --test --experimental-test-isolation=none tests/integration/meilisearch.test.ts",
     "test:unit": "node --import tsx --test --experimental-test-isolation=none tests/unit/*.test.ts",
     "test:cli": "node --import tsx --test --experimental-test-isolation=none tests/integration/cli-e2e.test.ts",
     "test:hostdb-sync": "node --import tsx --test --experimental-test-isolation=none tests/integration/hostdb-sync.test.ts",
-    "test:integration": "run-s test:pg test:mysql test:mariadb test:sqlite test:duckdb test:mongodb test:redis test:valkey test:clickhouse test:qdrant",
+    "test:integration": "run-s test:pg test:mysql test:mariadb test:sqlite test:duckdb test:mongodb test:redis test:valkey test:clickhouse test:qdrant test:meilisearch",
     "test:all": "run-s test:unit test:integration",
     "test:local": "./scripts/test-local.sh",
     "test:local:quick": "./scripts/test-local.sh --quick",
@@ -49,6 +50,7 @@
     "valkey",
     "clickhouse",
     "qdrant",
+    "meilisearch",
     "ferretdb",
     "sqlite",
     "duckdb",
