--- a/package.json
+++ b/package.json
@@ -10,21 +10,11 @@
     "start": "tsx cli/bin.ts",
     "dev": "tsx cli/bin.ts",
     "test": "run-s test:all",
-    "test:pg": "node --import tsx --test --experimental-test-isolation=none tests/integration/postgresql.test.ts",
-    "test:mysql": "node --import tsx --test --experimental-test-isolation=none tests/integration/mysql.test.ts",
-    "test:mariadb": "node --import tsx --test --experimental-test-isolation=none tests/integration/mariadb.test.ts",
-    "test:sqlite": "node --import tsx --test --experimental-test-isolation=none tests/integration/sqlite.test.ts",
-    "test:mongodb": "node --import tsx --test --experimental-test-isolation=none tests/integration/mongodb.test.ts",
-    "test:redis": "node --import tsx --test --experimental-test-isolation=none tests/integration/redis.test.ts",
-    "test:valkey": "node --import tsx --test --experimental-test-isolation=none tests/integration/valkey.test.ts",
-    "test:clickhouse": "node --import tsx --test --experimental-test-isolation=none tests/integration/clickhouse.test.ts",
-    "test:duckdb": "node --import tsx --test --experimental-test-isolation=none tests/integration/duckdb.test.ts",
-    "test:qdrant": "node --import tsx --test --experimental-test-isolation=none tests/integration/qdrant.test.ts",
-    "test:meilisearch": "node --import tsx --test --experimental-test-isolation=none tests/integration/meilisearch.test.ts",
+    "test:engine": "tsx scripts/test-engine.ts",
     "test:unit": "node --import tsx --test --experimental-test-isolation=none tests/unit/*.test.ts",
     "test:cli": "node --import tsx --test --experimental-test-isolation=none tests/integration/cli-e2e.test.ts",
     "test:hostdb-sync": "node --import tsx --test --experimental-test-isolation=none tests/integration/hostdb-sync.test.ts",
-    "test:integration": "run-s test:pg test:mysql test:mariadb test:sqlite test:duckdb test:mongodb test:redis test:valkey test:clickhouse test:qdrant test:meilisearch",
+    "test:integration": "tsx scripts/test-engine.ts",
     "test:all": "run-s test:unit test:integration",
     "test:local": "./scripts/test-local.sh",
     "test:local:quick": "./scripts/test-local.sh --quick",
