refactor: skip Meilisearch backup/restore tests on Windows due to upstream snapshot bug
**Meilisearch Integration Tests:**
- Skip backup/restore and data verification tests on Windows (upstream Meilisearch snapshot creation bug: "map size must be a multiple of the system page size")
- Add `IS_WINDOWS` platform check and `SKIP_BACKUP_ON_WINDOWS` conditional skip flag
- Apply skip condition to clone and data verification tests

**CI Workflow:**
- Add Windows-specific comment noting backup/restore tests are skipped due

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -859,6 +859,8 @@ jobs:
   # NOTE: Meilisearch is a REST API engine (no CLI shell like psql/redis-cli)
   #       Tests use HTTP requests to interact with the database
   #       Docker E2E tests use curl for connectivity/data operations
+  # WINDOWS: Backup/restore tests are skipped due to upstream Meilisearch bug
+  #          with snapshot creation (page size alignment issue). Other tests pass.
   # ============================================
   test-meilisearch:
     name: Meilisearch ${{ matrix.icon }} ${{ matrix.label }}
