refactor: skip Meilisearch cloned container deletion test on Windows and add package manager keyword
**Meilisearch Integration Tests:**
- Skip cloned container deletion test on Windows (applies existing `SKIP_BACKUP_ON_WINDOWS` flag)

**Package.json:**
- Add "package manager" to keywords list

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "sqlite",
     "duckdb",
     "tui",
-    "cli"
+    "cli",
+    "package manager"
   ],
   "author": "Bob Bass <bob@bbass.co>",
   "license": "PolyForm-Noncommercial-1.0.0",
