fix(menu): handle escape during dependency install and trim connection strings
- Trim whitespace from connection string input in transformer and validate functions
- Wrap promptInstallDependencies() in try-catch to handle EscapeError gracefully
- Continue menu loop instead of exiting when user presses Escape during install prompt
- Add locales package and configure en_US.UTF-8 locale in Docker test environment
- Set LANG and LC_ALL environment variables for PostgreSQL locale support

--- a/tests/docker/Dockerfile
+++ b/tests/docker/Dockerfile
@@ -58,6 +58,7 @@ RUN apt-get update && apt-get install -y \
 # libncurses6: terminal library required by MariaDB client
 # libxml2: XML library required by PostgreSQL (hostdb binaries compiled with XML support)
 # libicu70: ICU library required by PostgreSQL (Ubuntu 22.04 ships ICU 70)
+# locales: needed for PostgreSQL locale configuration (en_US.UTF-8)
 # sudo: needed for non-root user to run privileged commands
 # lsof: needed by SpinDB's findProcessByPort() to detect running database processes
 RUN apt-get update && apt-get install -y \
@@ -71,9 +72,15 @@ RUN apt-get update && apt-get install -y \
     libncurses6 \
     libxml2 \
     libicu70 \
+    locales \
     sudo \
     lsof \
+    && locale-gen en_US.UTF-8 \
     && rm -rf /var/lib/apt/lists/*
+
+# Set locale environment variables
+ENV LANG=en_US.UTF-8
+ENV LC_ALL=en_US.UTF-8
 
 # Install pnpm (pinned for reproducible builds)
 ARG PNPM_VERSION=9.14.2
