fix(ferretdb): escape quotes in Windows mongosh eval script and download MongoDB for mongosh
- Escape double quotes in --eval script for Windows command execution
- Add MongoDB binary download to CI workflow to provide bundled mongosh for FerretDB
- Add comment explaining mongosh dependency for FerretDB connect/run commands

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -573,6 +573,11 @@ jobs:
       - name: Download FerretDB binaries
         run: pnpm start engines download ferretdb 2
 
+      # FerretDB uses mongosh (MongoDB shell) for connect/run commands
+      # Download MongoDB binaries to get bundled mongosh
+      - name: Download MongoDB binaries (for mongosh)
+        run: pnpm start engines download mongodb 8.0
+
       - name: Show installed engines
         run: pnpm start engines list
 
