fix(ferretdb): remove Windows support due to postgresql-documentdb startup issues
- Remove Windows from FerretDB CI test matrix with explanatory comment
- Add Windows platform check in engines command to exit with clear error message
- Override extractWindowsBinaries() to throw descriptive error instead of attempting extraction
- Remove win32-x64 from FERRETDB_SUPPORTED_PLATFORMS set
- Update error messages to state "macOS and Linux only" instead of listing all platforms
- Add timeouts to Postgres-documentdb tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -522,6 +522,7 @@ jobs:
   # FerretDB Integration Tests
   # Uses SpinDB to download FerretDB + postgresql-documentdb (composite engine)
   # FerretDB requires TWO binaries: ferretdb (proxy) + postgresql-documentdb (backend)
+  # Note: Windows is not supported due to postgresql-documentdb startup issues
   # ============================================
   test-ferretdb:
     name: FerretDB ${{ matrix.icon }} ${{ matrix.label }}
@@ -542,9 +543,7 @@ jobs:
           - os: macos-14
             icon: 💻
             label: ARM
-          - os: windows-latest
-            icon: 🔷
-            label: Windows
+          # Windows not supported - postgresql-documentdb has startup issues
     steps:
       - name: Checkout
         uses: actions/checkout@v4
