feat(couchdb): add CouchDB engine support with REST API integration
- Add CouchDB engine implementation with REST API-based operations (no CLI shell)
- Configure default port 5984 with version 3.5.1 from hostdb
- Implement JSON backup/restore via `_all_docs` and `_bulk_docs` REST API endpoints
- Add Fauxton dashboard support at `/_utils` with admin/admin default credentials
- Configure health check at `/` endpoint returning welcome JSON with version
- Add CouchDB to CI test matrix across all platforms

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spindb",
-  "version": "0.23.5",
+  "version": "0.24.0",
   "description": "Zero-config Docker-free local database containers. Create, backup, and clone a variety of popular databases.",
   "type": "module",
   "bin": {
@@ -41,6 +41,7 @@
     "clickhouse",
     "qdrant",
     "meilisearch",
+    "couchdb",
     "ferretdb",
     "sqlite",
     "duckdb",
